--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>Floflis Platform</title>
-<center><img width="150px" src=""/><br/><h1>Floflis Platform</h1><h4>App ecosystem which can be a standalone OS (Linux or any other open kernel) or be run inside any other OS. Free, (ethical)open-source and decentralized. Lightweight or full-featured. Yours.</h4></center>
+<center><img width="300px" src="https://ipfs.io/ipfs/QmWwMFPL2jMjCcEyYPVmCikGb4aUZBXrzZHJ2wF4f2rKGH"/><br/><h1>Floflis Platform</h1><h4>App ecosystem which can be a standalone OS (Linux or any other open kernel) or be run inside any other OS. Free, (ethical)open-source and decentralized. Lightweight or full-featured. Yours.</h4></center>
 <h2>Guest - <small>A OS inside your OS</small></h2>
 <h3>CLI</h3>
 <p>Floflis' operating base. Even the graphical layers uses CLI.</p>
