--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<head>
+<link rel="shortcut icon" href="icon.ico" type="image/x-icon">
+<link rel="icon" href="icon.ico" type="image/x-icon">
 <title>Floflis Platform</title>
-<center><img width="300px" src="https://ipfs.io/ipfs/QmWwMFPL2jMjCcEyYPVmCikGb4aUZBXrzZHJ2wF4f2rKGH"/><br/><h1>Floflis Platform</h1><h4>App ecosystem which can be a standalone OS (Linux or any other open kernel) or be run inside any other OS. Free, open(ethical)-source and decentralized. Lightweight or full-featured. Yours.</h4></center>
+</head>
+<center><img width="250px" src="icon.svg"/><br/><h1>Floflis Platform</h1><h4>App ecosystem which can be a standalone OS (Linux or any other open kernel) or be run inside any other OS. Free, open(ethical)-source and decentralized. Lightweight or full-featured. Yours.</h4></center>
 <h2>Guest - <small>A OS inside your OS</small></h2>
 <h3>CLI</h3>
 <p>Floflis' operating base. Even the graphical layers uses CLI.</p>
@@ -11,3 +15,28 @@
 <p>It is like PortableApps Platform. It can run Internet Cat and any other Electron app, but using the same runtime, enabling apps which comes from thousand megabytes to just a few kilobytes.</p>
 <h2>OS - <small>Lightweight or full-featured OS powering your device</small></h2>
 <h3>HumaneOS</h3>
+<hr/>
+<img width="300px" src="img/undraw/loving.svg"/> <img width="300px" src="img/undraw/hooked.svg"/>
+<h1>Do you love Floflis?</h1>
+<p>Floflis loves people. People loves Floflis. Everyone helps and loves each other.</p>
+<p>We're accepting donations in Ethereum. Other cryptocurrencies will be accepted soon. Donations will be traceable on blockchain, and our use of donations will be tracked for your scrutiny.</p>
+<center><p>Ethereum address: <a href="ethereum://0x1a4E55f9f57D53Fbd9598CD8EEACF2Af4E91F420">0x1a4E55f9f57D53Fbd9598CD8EEACF2Af4E91F420</a>.</p>
+<br/>
+<img width="300px" src="img/donate/eth.png"/></center>
+<br/>
+<hr/>
+<img width="300px" src="img/undraw/subscriber.svg"/>
+<h1>Receive updates from Floflis</h1>
+<p>Subscribe to our <a href="https://floflis.github.io/blog/index.json" target="blank">JsonFeed</a> or <a href="https://floflis.github.io/blog/index.xml" target="blank">RSS feed</a>.</p>
+<br/>
+<hr/>
+<img width="300px" src="img/undraw/learning.svg"/> <img width="300px" src="img/undraw/candidate.svg"/>
+<h1>Your voice matters</h1>
+<p>Found bugs or wants to suggest a thing? Or to discuss anything?</p>
+<p>Send a email to: <a href="mailto:daniellmesquita@protonmail.com">daniellmesquita@protonmail.com</a>.</p>
+<hr/>
+<h1>To do:</h1>
+<ul>
+<li>Email newsletters</li>
+<li>Website in Hugo/FMWK</li>
+</ul>
