--- a/index.html
+++ b/index.html
@@ -1,20 +1,177 @@
-<head>
-<link rel="shortcut icon" href="icon.ico" type="image/x-icon">
-<link rel="icon" href="icon.ico" type="image/x-icon">
-<title>Floflis Platform</title>
-</head>
-<center><img width="250px" src="icon.svg"/><br/><h1>Floflis Platform</h1><h4>App ecosystem which can be a standalone OS (Linux or any other open kernel) or be run inside any other OS. Free, open(ethical)-source and decentralized. Lightweight or full-featured. Yours.</h4></center>
-<h2>Guest - <small>A OS inside your OS</small></h2>
-<h3>CLI</h3>
-<p>Floflis' operating base. Even the graphical layers uses CLI.</p>
-<p>Composed of DNA, Core and Soil layers. Further CLI layers spawns graphic desktop.</p>
-<h3>Internet Cat browser</h3>
-<p>Floflis OS as a web browser. Capable of running some important apps.</p>
-<h3>HTML5Apps Platform</h3>
-<p>Fully featured web apps platform, as graphical evolution of Floflis CLI apps and native-like apps evolution of Internet Cat.</p>
-<p>It is like PortableApps Platform. It can run Internet Cat and any other Electron app, but using the same runtime, enabling apps which comes from thousand megabytes to just a few kilobytes.</p>
-<h2>OS - <small>Lightweight or full-featured OS powering your device</small></h2>
-<h3>HumaneOS</h3>
+<!DOCTYPE html>
+<html lang="en-us">
+ <head>
+  <title color="">Floflis Platform</title>
+<meta charset="utf-8">
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta content="width=device-width,initial-scale=1,minimal-ui,shrink-to-fit=no,user-scalable=no" name="viewport">
+  <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
+  <link rel="icon" href="icon.ico" type="image/x-icon">
+<link rel="logo" href="flag.svg" border="true" />
+<base href="" target="_top" id="base">
+
+<script>base.href = document.location.href.replace("/media", "").replace("index.html", "").replace(/[&?]wrapper=False/, "").replace(/[&?]wrapper_nonce=[A-Za-z0-9]+/, "")</script>
+<!--  <link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/vue-material.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/theme/default.css">-->
+<script type="text/javascript" src="plugins/jQuery/jquery.min.js"></script>
+<script type="text/javascript" src="plugins/Popper.js/popper.min.js"></script>
+<script type="text/javascript" src="plugins/Bootstrap/js/bootstrap.min.js"></script>
+<script src="plugins/Bootstrap/themes/material/js/material.min.js"></script>
+<zeronet><script type="text/javascript" src="js/ZeroFrame.js"></script>
+<script type="text/javascript" src="plugins/ZeroDevLib/ZeroPage.js"></script></zeronet>
+<script type="text/javascript" src="js/page-common.js"></script>
+<link href="plugins/Bootstrap/themes/material/css/material.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/page-common.css">
+<link rel="stylesheet" type="text/css" href="css/app-common.css">
+<link rel="stylesheet" type="text/css" href="css/page-custom.css">
+<link rel="stylesheet" type="text/css" href="css/app-custom.css">
+<link href="Fonts/Cabin/font.css" rel="stylesheet">
+<link href="Fonts/Roboto/font.css" rel="stylesheet">
+<link href="Fonts/Material Icons/font.css" rel="stylesheet">
+<zeronet><link href="Fonts/Text Me One/font.css" rel="stylesheet"></zeronet>
+<meta name="pehtml" content="true">
+<meta name="directory" content="css, js, img, snd">
+<meta name="description" content="">
+  <meta name="keywords" content="video, format, png, svg, flac, ogg, tar.gz-archives, usv, tar.gz">
+ </head>
+<body id="body">
+<div id="app">
+<header><logo title="Floflis Platform">Floflis Platform</logo></header>
+
+<div class="content">
+<article>
+<center><img width="500px" src="banner.png"/><br/><img src="logotype.png" title="Floflis Platform" alt="Floflis Platform"/><br/><h3>App ecosystem which can be a standalone OS <small>(Linux or any other open kernel such as FreeBSD)</small> or run inside any other OS.</h3><h5>Free, open(ethical)-source and decentralized. Lightweight or full-featured as your choice. Scalable to any device and resources. <b>Yours</b>.</h5></center>
+<hr/>
+
+<h1>OS - <small>Lightweight or full-featured OS powering your device</small></h1>
+
+<div class="row">
+  <div class="col-sm-6">
+
+<div class="card" style="width: 18rem;">
+  <img width="300px" class="card-img-top" src="https://ipfs.io/ipfs/QmWwMFPL2jMjCcEyYPVmCikGb4aUZBXrzZHJ2wF4f2rKGH" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">HumaneOS</h5>
+    <p class="card-text">Truly decentralized. Lightweight, funny, ethical and modular operating system for any device.<br/><small>Actually based in Linux/Debian</small>.</p>
+    <a href="https://humaneos.github.io/" class="btn btn-primary">Know HumaneOS!</a>
+  </div>
+</div>
+
+  </div>
+
+</div>
+
+<h1>Guest - <small>A OS inside your OS</small></h1>
+
+<div class="row">
+  <div class="col-sm-6">
+
+<div class="card" style="width: 18rem;">
+  <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmUrknXmktf8SmRLTimgpat5wDJ5xMHRcHQL6AqGHzLtc9" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Internet Cat browser</h5>
+    <p class="card-text">Floflis OS as a web browser. Web 3.0 ready. Capable of running some important apps.</p><br/><small>Yet in development. See it on <a href="https://github.com/Floflis/Internet-Cat" target="blank">GitHub</a> or take a glance at its <a href="https://ipfs.io/ipfs/QmRc9dfuJ3zDUxXVXve4GZVpuPrAp1Uy4Digk1aaFF1eWX/" target="blank">in-development</a> site</small>.
+    <!--<a href="https://rinkeby.aragon.org/#/openplanet/" target="blank" class="btn btn-primary">Access</a>-->
+  </div>
+</div>
+
+  </div>
+
+  <div class="col-sm-6">
+
+<div class="card" style="width: 18rem;">
+  <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmRdGxVjpHK7piS261SakMQ5eFzoQi4D9kx7FRkLLFGq8K" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">HTML5Apps Platform</h5>
+    <p class="card-text">Fully featured web apps platform, as graphical evolution of Floflis CLI apps and native-like apps evolution of Internet Cat.</p>
+    <p class="card-text">It is like PortableApps Platform. It can run Internet Cat and any other Electron app, but using the same runtime, enabling apps which comes from thousand megabytes to just a few kilobytes.</p><br/><small>Yet in development. See it on <a href="https://github.com/html5appsplatform/HTML5Apps-Platform" target="blank">GitHub</a> or take a glance at its <a href="https://ipfs.io/ipfs/QmZezYgLWk2m6HHdsWdZfn7irbY7cra663BuZJ7RrZKgeQ/" target="blank">in-development</a> site</small>.
+    <!--<a href="https://rinkeby.aragon.org/#/openplanet/" target="blank" class="btn btn-primary">Access</a>-->
+  </div>
+</div>
+
+  </div>
+
+  <div class="col-sm-6">
+
+<div class="card" style="width: 18rem;">
+  <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmRYcXCF4ADCHh3oMo3mdQ1UW1X4p3hdoj4HPjRekipDs1" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">CLI</h5>
+    <p class="card-text">Floflis' operating base. Even the graphical layers uses CLI.</p>
+    <p class="card-text">Composed of DNA, Core and Soil layers. Further CLI layers spawns graphic desktop.</p>
+    <a href="https://floflis.github.io/cli" class="btn btn-primary">Access</a>
+  </div>
+</div>
+
+  </div>
+
+</div>
+
+<hr/>
+<h2>Know more about the floverse:</h2>
+<img width="300px" src="img/undraw/server_down.svg"/> <img width="300px" src="img/undraw/around_the_world.svg"/>
+<h1>Decentralized</h1>
+<p><b>Do you like decentralization? No purpose if your OS isn't yet decentralized.</b></p>
+<p>All Linux OSes claims themselves as free/libre; but they puts you in risk when downloading updates (for OS and its softwares) from centralized servers.</p>
+<p>Floflis is decentralized, with updates from P2P network (Dat/IPFS protocols), storing data in a blockchain-like (append-only logs) datastore.</p>
+<ul>
+<li>Apps/games are owned and managed by their community, not from servers</li>
+<li>Receive verified OS updates from your friends/connections</li>
+</ul>
+<p>Do you want to know when Floflis gets decentralized updates? <a href="https://floflis.github.io/blog/" target="blank">Subscribe to our blog</a>.</p>
+<br/>
+<hr/>
+<div style="text-align:right">
+<img width="300px" src="img/undraw/add_content.svg"/> <img width="300px" src="img/undraw/responsiveness.svg"/>
+<h1>Modular</h1>
+<p>Can you install Windows 7 on your Windows 98 machine, or on your WiFi router?</p>
+<p><b>You have rights on your device and on its OS; and as it is yours, you should have the right to move, transform, shrink or grow it.</b></p>
+<p>Floflis haves various layers, beginning in Recipes layer.</p>
+<ul>
+<li><b>Recipes</b> layer contains links to compilers and source-codes, for targeting lots of different devices. Isn't a usable layer, but only a reference/map/documentation/scriptset for developers.</li>
+<li><b>DNA</b> layer is the working and primal Floflis. Haves Floflis' basic subsystem and is upgradeable to Core. Also, it can come as a standalone OS or installable as program on your Linux/MacOS (or any other device/OS).</li>
+<li><b>Core</b> layer is upgradeable from DNA. Contains advanced CLI programs, such as NodeJS+Dat and CJDNS/Yggdrasil.</li>
+</ul>
+<p>There are also other layers, but they're graphical: <b>Grass</b>, <b>Base</b>, <b>Home</b>, <b>Ultimate</b> and <b>Quantum</b>.</p> CLI software from these layers can also be installed on DNA/Core.</p>
+<p>Do you want to know when the other layers are available? <a href="https://floflis.github.io/blog/" target="blank">Subscribe to our blog</a>.</p>
+</div>
+<br/>
+<img width="300px" src="img/undraw/speed_test.svg"/>
+<h1>Lightweight, fast, smooth</h1>
+<p>A enlightment window desktop, modest XFCE or a full-featured version. You can grow or shrink your OS at any time. Download for any device kind of any capability. It adapts itself to fit available resources.</p>
+<p>When installing itself, Floflis DNA asks which modules you want to include. Also, you can remove later any module you won't need.</p>
+<p>Download should be fast on slow Internet connections (from 700KB to 2KB), and writable on CDs and even floppy disks.</p>
+<p>Easily install Floflis on your router, Raspberry Pi, etc. Just type "floflis", and it will guide you; running fastly and smoothly, being personalizable/upgradeable.</p>
+<small>Don't like bloatware OS on your router and others? Instead of installing Floflis as a bash program, you can install it as a OS.</small>
+<br/>
+<hr/>
+<div style="text-align:right">
+<img width="300px" src="img/undraw/adjustments.svg"/>
+<h1>Fully adjustable</h1>
+<p>Already pointed how Floflis is modular and lightweight.</p>
+<p>But more personalization is to be implemented, such as themes and sets.</p>
+</div>
+<br/>
+<hr/>
+<img width="300px" src="img/undraw/back_home.svg"/>
+<h1>It's yours</h1>
+<ul>
+<li>Trully <b>open-source</b> (doesn't includes proprietary software, and incentives you to not depend on that)</li>
+<li>Totally <b>personalizable</b></li>
+<li>Fully <b>decentralized</b></li>
+<li>Respects your <b>privacy</b></li>
+</ul>
+<br/>
+<hr/>
+<div style="text-align:right">
+<img width="300px" src="img/undraw/fingerprint.svg"/>
+<h1>Decentralized identity (comming soon)</h1>
+<p>Have accounts on multiple decentralized registries, linked into one decentralized account (omni-link).</p>
+<p>Add friends and exchange files/Internet routing.</p>
+<p>Do you want to know when this feature lands? <a href="https://floflis.github.io/blog/" target="blank">Subscribe to our blog</a>.</p>
+</div>
+<br/>
+<hr/>
 <hr/>
 <img width="300px" src="img/undraw/loving.svg"/> <img width="300px" src="img/undraw/hooked.svg"/>
 <h1>Do you love Floflis?</h1>
@@ -33,10 +190,81 @@
 <img width="300px" src="img/undraw/learning.svg"/> <img width="300px" src="img/undraw/candidate.svg"/>
 <h1>Your voice matters</h1>
 <p>Found bugs or wants to suggest a thing? Or to discuss anything?</p>
-<p>Send a email to: <a href="mailto:daniellmesquita@protonmail.com">daniellmesquita@protonmail.com</a>.</p>
+<p>Send a email to: <a href="mailto:floflis@protonmail.com">daniellmesquita@protonmail.com</a>.</p>
 <hr/>
 <h1>To do:</h1>
 <ul>
 <li>Email newsletters</li>
-<li>Website in Hugo/FMWK</li>
+<li>Website in Hugo</li>
 </ul>
+
+<hr/>
+
+<div class="row">
+  <div class="col-sm-6">
+
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="https://ipfs.io/ipfs/QmPvZ7k88Qd9qRxvYPYoA9bnVLEWhNwRMQT2y2GdrhdMt6/img/aragon.svg" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Our DAO</h5>
+    <p class="card-text">Join Floflis Platform's decentralized governance.</p>
+    <a href="https://rinkeby.aragon.org/#/floflis" target="blank" class="btn btn-primary">Access</a>
+  </div>
+ <div class="card-footer text-muted">
+    (yet on Rinkeby testnet)
+  </div>
+</div>
+
+  </div>
+
+</div>
+
+<zeronet><div id="out"></div>
+
+<script>
+
+class Page extends ZeroFrame {
+	setSiteInfo(site_info) {
+		var out = document.getElementById("out")
+		out.innerHTML =
+			"Page address: " + site_info.address +
+			"<br>- Peers: " + site_info.peers +
+			"<br>- Size: " + site_info.settings.size +
+			"<br>- Modified: " + (new Date(site_info.content.modified*1000))
+	}
+
+	onOpenWebsocket() {
+		this.cmd("siteInfo", [], function(site_info) {
+			page.setSiteInfo(site_info)
+		})
+	}
+
+	onRequest(cmd, message) {
+		if (cmd == "setSiteInfo")
+			this.setSiteInfo(message.params)
+		else
+			this.log("Unknown incoming message:", cmd)
+	}
+}
+page = new Page()
+
+</script></zeronet>
+
+<hr/>
+
+</article>
+<footer><div class="footer-shadow"></div>
+<center>Last update in 03/11/2019 at 18:44</center><a href="https://plasnerd.github.io/Framework.js/" target="blank"><img src="https://framework.js.org/img/seal-2_w.png" width="167px" title="Built with FrameworkJS" style="-webkit-user-drag:element"></a><a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>
+<div class="social-icons">
+<a rel="me" href="https://mastodon.social/@floflis" target="blank"><img src="img/social/mastodon.svg" width="40px" height="40px" title="Follow us on Mastodon and receive latest news feed about Floflis and other useful projects" alt="Mastodon" class="round"></a>
+<a href="https://riot.im/app/#/+floflis:matrix.org" target="blank"><img src="img/social/riot.svg" width="40px" height="40px" title="Chat with us or get support" alt="Riot.im" class="round"></a>
+<!--<a href="https://matrix.to/#/#openplanetnews:matrix.org" target="blank"><img src="img/social/riot.svg" width="40px" height="40px" title="Enable notifications for our updates" alt="Riot.im" class="round"></a>-->
+<a href="https://gitlab.com/floflis" target="blank"><img src="img/social/gitlab.svg" width="40px" height="40px" title="See first the news and improve Floflis in GitLab" alt="GitLab" class="round"></a>
+<a href="https://github.com/Floflis" target="blank"><img src="img/social/github.svg" width="40px" height="40px" title="See first the news and improve Floflis in GitHub" alt="GitHub"></a><!-- <a href="https://facebook.com/" target="blank"><img src="img/social/facebook.svg" width="40px" height="40px" title="Like us and receive latest news feed about FrameworkJS progress and other development tools" alt="Facebook"></a>--><a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a><a href="https://opencollective.com/floflis" target="blank"><img src="img/social/opencollective.svg" width="40px" height="40px" title="Contribute to Floflis in Open Collective" alt="Twitter"></a><!--<a href="https://.deviantart.com" target="blank"><img src="img/social/deviantart.svg" width="40px" height="40px" title="Follow us and receive latest backgrounds, designs and apps" alt="Deviantart"></a>--></div>
+<div class="social-buttons"></div>
+<copyright><center><center><a href="https://rinkeby.aragon.org/#/floflis" target="_blank"><img width="350px" src="img/5d30129fbe8118efde2a8a25_Badge Dark.svg"/></a><br/>(c) 2017-2019 Floflis Platform <a href="https://rinkeby.aragon.org/#/floflis" target="_blank">DAO</a> by <a href="https://ipfs.io/ipfs/QmPvZ7k88Qd9qRxvYPYoA9bnVLEWhNwRMQT2y2GdrhdMt6/" target="blank">Open Planet Initiative</a>.</center></copyright>
+</footer>
+</div>
+</div>
+</body>
+</html>
