--- a/index.html
+++ b/index.html
@@ -40,11 +40,104 @@
 
 <div class="content">
 <article>
-<center><img width="500px" src="banner.png"/><br/><img src="logotype.png" title="Floflis Platform" alt="Floflis Platform"/><br/><h3>App ecosystem which can be a standalone OS <small>(Linux or any other open kernel such as FreeBSD)</small> or run inside any other OS.</h3><h5>Free, open(ethical)-source and decentralized. Lightweight or full-featured as your choice. Scalable to any device and resources. <b>Yours</b>.</h5></center>
+<center><img class="img-fluid" width="500px" src="banner.png"/><br/><img class="img-fluid" src="logotype.png" title="Floflis Platform" alt="Floflis Platform"/><br/><h2>The Web 3.0 is here. Future is today.</h2><h3>Floflis is a (d)app ecosystem which can be a standalone OS <small>(Linux or any other open kernel such as FreeBSD)</small> or run as a platform inside any other OS.</h3><h5>Free, open(ethical)-source and decentralized. Lightweight or full-featured as your choice. Scalable to any device and resources. <b>Yours</b>.</h5></center>
 <hr/>
+<style>
+h1.wowpaper {
+margin-bottom: 24px;
+font-size: 5rem;
+line-height: 5rem;
+color: rgb(0, 0, 0)!important;
+line-height: 2.5rem;
+letter-spacing: -0.5px;
+text-transform: uppercase;
+font-weight: 700;
+font-size: 2.5rem;
+font-family: "AvertaStd-Black", "Arial", "Helvetica", sans-serif;
+margin-bottom: 12px;
+}
+h1.wowpaper.selectink:before {
+content: "";
+position: absolute;
+height: 5%;
+left: -5px;
+z-index: -1;
+}
+h1.wowpaper.selectink.web3:before {
+width: 38%;
+    background-color: #ff8aff;
+}
+h1.wowpaper.selectink.defi:before {
+width: 62%;
+    background-color: #8cffde;
+}
+h1.wowpaper.selectink.floflisnew:before {
+width: 62%;
+    background-color: #fefe69;
+}
+h1.wowpaper.selectink.syst-os:before {
+width: 82%;
+    background-color: #444;
+	color: #fff;
+}
+</style>
+
+<img class="rounded float-left" src="img/web3.png" width="350px"><h1 class="wowpaper selectink web3">Its for Web 3.0...</h1>
+<h1>...what Windows 98 was for the Web 2.0.</h1>
+<h3>You're being like a dependent child in parent's home by using Facebook, GitHub and other web 2.0 services: <b>they will be looking at you, have your data at hands and can take and sell your things at any time.</b> <small>Difference is that services like <mark style="padding:3px;background:#fefe69">Windows 10 and Facebook doesn't loves you, but your data</mark> as it is money.</small> They're even able to manipulate data and show you a different reality than what other users sees.</h3>
+<h2>Even more frustating when you need to send a life-saving message, but their servers are full... ...or they simply hates because of your climate change posts.</h2>
+<p>Right now, you are in a land of macOS/Windows duopoly, banks, corruption, hipocrisy, division, censorship and oppression.</p>
+<p>Conquest your cyber independence. It's time to have your own land and house.</p>
+<p>Ride a unicorn <small>(a real one - Floflis)</small> heading to the moon using IPFS, Ethereum and other technologies for a open and secure Web3.</p>
+<hr/>
+<p><small>IPFS already works. Ethereum and others (such as CJDNS) are being worked on.</small></p>
+<h3>Also, you will be able to have desktop apps and OS functions directly interacting with Ethereum, using <a href="https://frame.sh" target="_blank">Frame</a> and hardware wallets (optional), for a deep OS-level web3 experience.</h3>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+
+<center>
+<div class="card bg-light mb-3" style="max-width: 18rem;">
+  <div class="card-header"><img class="rounded round float-left" src="https://peepeth.s3-us-west-1.amazonaws.com/images/avatars/ieroMwaY/small.png" width="44px"/> Daniell Mesquita<br/><small>Creator of Floflis OS and actually the only developer.</small></div>
+  <div class="card-body">
+    <p class="card-text">So, you paranoidly promotes open-source and decentralization, but uses a proprietary OS like Windows/macOS? It is like being full of weapons but inside a glass house.</p>
+	<p class="card-text"><small class="text-muted">See this peep at <a href="https://peepeth.com/daniellmesquita/peeps/QmXsHNVdnv4R466Wrix4P9nyf8a1XBM8hVSi5Lm7Mhnr2P" target="_blank">Peepeth</a>.</small></p>
+  </div>
+</div>
+</center>
+
+<img class="rounded float-left" src="img/floflisnew.png" width="350px"><h1 class="wowpaper selectink floflisnew">So, you hate Linux...</h1>
+<h1>...or you love it, because it's Unix like macOS.</h1>
+<h2>Innovators can't anymore innovate. Windows, macOS and even Linux have deceptioned. Floflis seek for innovation.</h2>
+<h3>Distros are making the ecosystem fragmented and weak like in Android versions. Majority of Linux distributions are just modifications of existing systems.</h3>
+<h4>Linux is the working innovation we can have for now, and Floflis know how to make it into an performant, easy and pleasant OS. Next step is moving to BSD, KaiOS and redoxOS. Floflis will never turn into a stuck innovator.</h4>
+<h6>You should also be able to run Floflis as a platform on your existing device: Windows, macOS, Linux and even Android and ChromeOS.</h6>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+
+<img class="rounded float-left" src="img/eth.png" width="350px"> <h1 class="wowpaper selectink defi">Decentralized Finance (DeFi) is here.</h1>
+<h2>Bigger and more democratic than Bitcoin, DeFi <small>(introduced in Ethereum)</small> is unleashing a new economy ecosystem, interactions and workflows. <mark style="padding:3px;background:#fefe69">Floflis will assist user into getting right on it</mark>, and guide on new opportunities of dapps and protocols. <small><b>Note</b>: we don't promote centralized protocols (the ones which are managed by a admin key) and, if the case, a warning message will be displayed.</small></h2>
+<p>There is a Etherean native behind Floflis: <a href="https://daniellmesquita.eth.link" target="_blank">daniellmesquita.eth</a>.</p>
+<p><small>Please don't store high amounts of crypcurrencies/tokens/NFTs. Don't fully trust Floflis until it implements transparent updates. Always using a hardware wallet is adviced.</small></p>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+
+<hr/>
+<center>
+<h4>Not limited to Ethereum. Literally.</h4>
+<h5>Alongside dapps, you can also run Linux apps, other web apps and even Windows/Android apps.</h5>
+<p>Also, Floflis will have other cryptocurrencies inside (such as Duniter, Bitcoin and Bisq decentralized exchange).</p>
+<p><small>Don't be afraid: Floflis will never promote scams such as Tron, Tezos and EOS.</small></p>
+</center>
+<hr/>
+
+<img class="rounded float-left" src="img/syst-os.png" width="350px"> <h1 class="wowpaper selectink syst-os">A systematic ecosystem above a OS.</h1>
+<h2>Floflis introduces a very different workflow on top of Linux and any other OS.</h2>
+<h3>Tree folder is more easy and organized than Linux (like in Windows), own init system puts IPFS and CJDNS to work at the boot, and other daemons for new services and interactions are being worked.</h3>
+<h5>At Floflis, security is seen with a paranoid vision. An example of that is Floflis Shield, a brand new daemon for app permissions.</h5>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
 <h1>OS - <small>Lightweight or full-featured OS powering your device</small></h1>
 
+<p>Yet in development.</p>
+
+<!--
 <div class="row">
   <div class="col-sm-6">
 
@@ -60,8 +153,23 @@
   </div>
 
 </div>
+-->
 
 <h1>Guest - <small>A OS inside your OS</small></h1>
+
+  <div class="col-sm-6">
+
+<div class="card" style="width: 18rem;">
+  <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmRYcXCF4ADCHh3oMo3mdQ1UW1X4p3hdoj4HPjRekipDs1" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">CLI</h5>
+    <p class="card-text">Floflis' operating base. Even the graphical layers uses CLI.</p>
+    <p class="card-text">Composed of DNA, Core and Soil layers. Further CLI layers spawns graphic desktop.</p>
+    <a href="https://floflis.github.io/cli" class="btn btn-primary">Access</a>
+  </div>
+</div>
+
+  </div>
 
 <div class="row">
   <div class="col-sm-6">
@@ -86,20 +194,6 @@
     <p class="card-text">Fully featured web apps platform, as graphical evolution of Floflis CLI apps and native-like apps evolution of Internet Cat.</p>
     <p class="card-text">It is like PortableApps Platform. It can run Internet Cat and any other Electron app, but using the same runtime, enabling apps which comes from thousand megabytes to just a few kilobytes.</p><br/><small>Yet in development. See it on <a href="https://github.com/html5appsplatform/HTML5Apps-Platform" target="blank">GitHub</a> or take a glance at its <a href="https://ipfs.io/ipfs/QmZezYgLWk2m6HHdsWdZfn7irbY7cra663BuZJ7RrZKgeQ/" target="blank">in-development</a> site</small>.
     <!--<a href="https://rinkeby.aragon.org/#/openplanet/" target="blank" class="btn btn-primary">Access</a>-->
-  </div>
-</div>
-
-  </div>
-
-  <div class="col-sm-6">
-
-<div class="card" style="width: 18rem;">
-  <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmRYcXCF4ADCHh3oMo3mdQ1UW1X4p3hdoj4HPjRekipDs1" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">CLI</h5>
-    <p class="card-text">Floflis' operating base. Even the graphical layers uses CLI.</p>
-    <p class="card-text">Composed of DNA, Core and Soil layers. Further CLI layers spawns graphic desktop.</p>
-    <a href="https://floflis.github.io/cli" class="btn btn-primary">Access</a>
   </div>
 </div>
 
