Start changing the philosofy of the home page

--- a/index.html
+++ b/index.html
@@ -8,17 +8,10 @@
   <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
   <link rel="icon" href="icon.ico" type="image/x-icon">
 <link rel="logo" href="flag.svg" border="true" />
-<base href="" target="_top" id="base">
-
-<script>base.href = document.location.href.replace("/media", "").replace("index.html", "").replace(/[&?]wrapper=False/, "").replace(/[&?]wrapper_nonce=[A-Za-z0-9]+/, "")</script>
-<!--  <link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/vue-material.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/theme/default.css">-->
 <script type="text/javascript" src="plugins/jQuery/jquery.min.js"></script>
 <script type="text/javascript" src="plugins/Popper.js/popper.min.js"></script>
 <script type="text/javascript" src="plugins/Bootstrap/js/bootstrap.min.js"></script>
 <script src="plugins/Bootstrap/themes/material/js/material.min.js"></script>
-<zeronet><script type="text/javascript" src="js/ZeroFrame.js"></script>
-<script type="text/javascript" src="plugins/ZeroDevLib/ZeroPage.js"></script></zeronet>
 <script type="text/javascript" src="js/page-common.js"></script>
 <link href="plugins/Bootstrap/themes/material/css/material.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/page-common.css">
@@ -40,7 +33,20 @@
 
 <div class="content">
 <article>
-<center><img class="img-fluid" width="500px" src="banner.png"/><br/><img class="img-fluid" src="logotype.png" title="Floflis Platform" alt="Floflis Platform"/><br/><h2>The Web 3.0 is here. Future is today.</h2><h3>Floflis is a (d)app ecosystem which can be a standalone OS <small>(Linux or any other open kernel such as FreeBSD)</small> or run as a platform inside any other OS.</h3><h5>Free, open(ethical)-source and decentralized. Lightweight or full-featured as your choice. Scalable to any device and resources. <b>Yours</b>.</h5></center>
+<center><img class="img-fluid" width="500px" src="banner.png"/><br/><img class="img-fluid" src="logotype.png" title="Floflis Platform" alt="Floflis Platform"/><br/><h2>Its to the Web 3.0 what Windows 98 was to the Web 1.0.</h2><h3>What would happen if nowadays OSes had Web3/PlayToEarn/tokens/NFTs integrated? See it on Floflis 🏐</h3>
+
+<h0>But wait!</h0>
+<h1>BLA BLA BLA NFTS, BLA BLA BLA TOKENS...</h1>
+<h1>...NO! Floflis isn't limited to a specific niche, because Floflis is a evolution also in:</h1>
+
+<h2>Rust everywhere 🦀</h2>
+<h3>Rust from the shell to the prompt; from the prompt to the programs.</h3>
+
+<h2><img width="32px" src="https://avatars.githubusercontent.com/u/50749515?s=200&v=4"> <b>Shell</b>: purely in Rust</h2>
+<p>Floflis have replaced Bash by a modern and faster shell</p>
+<img src="https://github.com/nushell/nushell/raw/main/images/nushell-autocomplete5.gif">
+
+<h3>Floflis is an ecosystem which can be a standalone OS <small>(Linux or any other open kernel)</small> or run as a platform inside any other OS.</h3><h5>Lightweight or full-featured as your choice. Scalable to any device and resources. <b>Yours</b>.</h5></center>
 <hr/>
 <style>
 h1.wowpaper {
