Use a moderate language + divide between the Platform and the OS sites - fixes and updates

--- a/os/index.html
+++ b/os/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta content="width=device-width,initial-scale=1,minimal-ui,shrink-to-fit=no,user-scalable=no" name="viewport">
+<base href="../">
   <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
   <link rel="icon" href="icon.ico" type="image/x-icon">
 <link rel="logo" href="flag.svg" border="true" />
@@ -27,12 +28,32 @@
   <meta name="keywords" content="video, format, png, svg, flac, ogg, tar.gz-archives, usv, tar.gz">
  </head>
 <body id="body">
+
+<style>
+.header, header {
+    background: #3eb7e5 !important;
+}
+
+.logo,logo {
+    width: 315px!important;
+    background: url(./os/logotype_white.svg) no-repeat no-repeat 3px 0px !important;
+    background-size: 120px !important;
+    padding: 0 0px 9px 120px !important;
+    line-height: 41px !important;
+    top: 1px !important;
+}
+</style>
+
 <div id="app">
-<header><logo title="Floflis Platform">Floflis Platform</logo></header>
+<header><logo title="Floflis OS"></logo></header>
 
 <div class="content">
 <article>
-<center><img class="img-fluid" width="500px" src="banner.png"/><br/><img class="img-fluid" src="logotype.png" title="Floflis Platform" alt="Floflis Platform"/><br/><h2></h2><h3></h3>
+<center><img class="img-fluid" width="500px" src="https://github.com/Floflis/nftmark/raw/master/screenshot.png"/><br/><br/><img width="420px" class="img-fluid" src="./os/logotype.svg" title="Floflis OS" alt="Floflis OS"/><br/><h2>Its to the Web 3.0 what Windows 98 was to the Web 1.0.</h2><h3>What would happen if nowadays OSes had Web3/PlayToEarn/tokens/NFTs integrated? See it on Floflis 🏐</h3>
+
+<h0>But wait!</h0>
+<h1>BLA BLA BLA NFTS, BLA BLA BLA TOKENS...</h1>
+<h1>...NO! Floflis isn't limited to a specific niche; delete NFTs + bla bla tokens/Ethereum and Floflis still is a new, first-of-its-kind distro/ecosystem:</h1>
 
 <h2>Rust everywhere 🦀</h2>
 <h3>Rust from the shell to the prompt; from the prompt to the programs.</h3>
@@ -48,9 +69,32 @@
 <p>Floflis uses a beauty/infinitely customizable, modern and blazing-fast prompt: <a href="https://github.com/starship/starship" target="_blank">Starship 🚀</a></p>
 <img width="840px" src="https://raw.githubusercontent.com/starship/starship/master/media/demo.gif">
 
+<h1>Desktop backgrounds as NFTs? U're covered!</h1>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Are your friend okay abt you 🎯 your phone at their screen?<br><br>If true and you see an monitor with this QR code: SCAN IT!<br><br>And you&#39;ll verify they have an NFT desktop background! <a href="https://t.co/3s4YsCsTZd">pic.twitter.com/3s4YsCsTZd</a></p>&mdash; Floflis.eth (@FloflisOS) <a href="https://twitter.com/FloflisOS/status/1456870807460880384?ref_src=twsrc%5Etfw">November 6, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+<p>NFT backgrounds are being worked on; soon.</p>
 <hr/>
 
-<h3>Floflis is an ecosystem which can be a standalone OS <small>(Linux or any other open kernel)</small> or run as a platform inside any other OS.</h3><h5>Lightweight or full-featured as your choice. Scalable to any device and resources. <b>Yours</b>.</h5></center>
+<h1>Your Web3 and OS dashboard</h1>
+<p>Meet <a href="https://github.com/Floflis/Floflis-Central" target="_blank">Floflis Central</a>.</p>
+<div class="caption"><img height="601px" class="caption" style="height:601px!important" title="Understand your balance of FLOF tokens, get aware of your updates on the first page and personalize your photo/name" src="https://github.com/Floflis/Floflis-Central/raw/main/screenshot.png"><span>Understand your balance of FLOF tokens, get aware of your updates on the first page and personalize your photo/name</span></div>
+<br/>
+<br/>
+<div class="caption"><img height="601px" class="caption" style="height:601px!important" title="Personalize your PC in a beauty, intuitive screen" src="https://github.com/Floflis/Floflis-Central/raw/main/screenshot2.png"><span>Personalize your PC in a beauty, intuitive screen</span></div>
+<hr/>
+
+<h1>Firedoge?</h1>
+<img width="150px" src="https://github.com/zilldao/firedoge/raw/main/icon.png">
+<h2>Yes, it exists.</h2>
+<p>Very soon.</p>
+<hr/>
+
+<img class="rounded float-left" src="img/web3.png" width="350px"><h1 class="wowpaper selectink web3">Its for Web 3.0...</h1>
+<h1>...what Windows 98 was for the Web 1.0.</h1>
+<hr/>
+<h3>Also, you will be able to have desktop apps and OS functions directly interacting with Ethereum, using <a href="https://frame.sh" target="_blank">Frame</a> and hardware wallets (optional), for a deep OS-level web3 experience.</h3>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+
+</center>
 <hr/>
 <style>
 h1.wowpaper {
@@ -92,115 +136,6 @@ width: 82%;
 }
 </style>
 
-<!--<img class="rounded float-left" src="img/floflisnew.png" width="350px"><h1 class="wowpaper selectink floflisnew">So, you hate Linux...</h1>
-<h1>...or you love it, because it's Unix like macOS.</h1>
-<h6>You should also be able to run Floflis as a platform on your existing device: Windows, macOS, Linux and even Android and ChromeOS.</h6>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-<img class="rounded float-left" src="img/eth.png" width="350px"> <h1 class="wowpaper selectink defi">Decentralized Finance (DeFi) is here.</h1>
-<h2>Bigger and more democratic than Bitcoin, DeFi <small>(introduced in Ethereum)</small> is unleashing a new economy ecosystem, interactions and workflows. <mark style="padding:3px;background:#fefe69">Floflis will assist user into getting right on it</mark>, and guide on new opportunities of dapps and protocols. <small><b>Note</b>: we don't promote centralized protocols (the ones which are managed by a admin key) and, if the case, a warning message will be displayed.</small></h2>
-<p>There is a Etherean native behind Floflis: <a href="https://daniellmesquita.eth.link" target="_blank">daniellmesquita.eth</a>.</p>
-<p><small>Please don't store high amounts of crypcurrencies/tokens/NFTs. Don't fully trust Floflis until it implements transparent updates. Always using a hardware wallet is adviced.</small></p>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-<hr/>
-<center>
-<h4>Not limited to Ethereum. Literally.</h4>
-<h5>Alongside dapps, you can also run Linux apps, other web apps and even Windows/Android apps.</h5>
-<p>Also, Floflis will have other cryptocurrencies inside (such as Bitcoin and Bisq decentralized exchange).</p>
-<p><small>Don't be afraid: Floflis will never promote scams such as Tron, Tezos and EOS.</small></p>
-</center>
-<hr/>
-
-<img class="rounded float-left" src="img/syst-os.png" width="350px"> <h1 class="wowpaper selectink syst-os">A systematic ecosystem above a OS.</h1>
-<h2>Floflis introduces a very different workflow on top of Linux and any other OS.</h2>
-<h3>Tree folder is more easy and organized than Linux (like in Windows), own init system puts IPFS and Yggdrasil (limited to specific regions only) to work at the boot, and other daemons for new services and interactions are being worked.</h3>
-<h5>We are also considering to develop Floflis Shield, a brand new daemon for app permissions (so, shell programs could ask for permissions before performing specific tasks).</h5>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>-->
-
-<h1>OS - <small>Lightweight or full-featured OS powering your device</small></h1>
-
-<div class="row">
-  <div class="col-sm-6">
-
-<div class="card" style="width: 18rem;">
-  <img width="300px" class="card-img-top" src="https://github.com/Floflis/nftmark/raw/master/screenshot.png" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">Floflis OS</h5>
-    <p class="card-text">The lead product of the Floflis Platform 🏅<br/><small>Currently based in <b>Ubuntu</b> (PCs, Raspberry Pi, SiFive Unmatched - or <b>RaspiOS</b> on its armhf - Raspberry Pi Zero/W - version)</small>.</p>
-    <a href="./os" class="btn btn-primary">Know Floflis OS!</a>
-  </div>
-</div>
-
-  </div>
-  
-  <div class="col-sm-6">
-
-<div class="card" style="width: 18rem;">
-  <img width="300px" class="card-img-top" src="https://ipfs.io/ipfs/QmWwMFPL2jMjCcEyYPVmCikGb4aUZBXrzZHJ2wF4f2rKGH" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">UniOS</h5>
-    <p class="card-text">The crossover between <a href="https://uniswap.org/" target="_blank">Uniswap</a> and <a href="./os">Floflis OS</a>.<br/>Its Floflis, but themed with Uniswap's design and philosophy.<br/><small>Currently based in Ubuntu</small>.</p>
-    <a href="" class="btn btn-primary">Know UniOS (not available yet)!</a>
-  </div>
-</div>
-
-  </div>
-
-</div>
-
-<h1>Guest - <small>A OS inside your OS</small></h1>
-
-<div class="row">
-
-  <div class="col-sm-6">
-
-<div class="card" style="width: 18rem;">
-  <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmRYcXCF4ADCHh3oMo3mdQ1UW1X4p3hdoj4HPjRekipDs1" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">CLI</h5>
-    <p class="card-text">Floflis' operating base. Even the graphical layers uses CLI.</p>
-    <p class="card-text">Composed of DNA, Core and Soil layers. Further CLI layers spawns graphic desktop.</p>
-    <a href="https://floflis.github.io/cli" class="btn btn-primary">Access</a>
-  </div>
-</div>
-
-  </div>
-  
-  <div class="col-sm-6">
-
-<div class="card" style="width: 18rem;">
-  <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmRdGxVjpHK7piS261SakMQ5eFzoQi4D9kx7FRkLLFGq8K" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">HTML5Apps Platform</h5>
-    <p class="card-text">Fully featured web apps platform, that can bring Floflis as a graphical app to any OS.</p>
-    <p class="card-text">It is like PortableApps Platform. It can run <a href="https://github.com/Floflis/Floflis-Central" target="_blank">Floflis Central</a> and any other Electron app, but using the same runtime: so apps which had thousand megabytes will have just a few kilobytes.</p><br/><small>Yet in development. See it on <a href="https://github.com/html5appsplatform/HTML5Apps-Platform" target="blank">GitHub</a> or take a glance at its <a href="https://ipfs.io/ipfs/QmZezYgLWk2m6HHdsWdZfn7irbY7cra663BuZJ7RrZKgeQ/" target="blank">in-development</a> site</small>.
-    <!--<a href="" target="blank" class="btn btn-primary">Access</a>-->
-  </div>
-</div>
-
-  </div>
-  
-</div>
-
-<!--<div class="row">
-  <div class="col-sm-6">
-
-<div class="card" style="width: 18rem;">
-  <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmUrknXmktf8SmRLTimgpat5wDJ5xMHRcHQL6AqGHzLtc9" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">Internet Cat browser</h5>
-    <p class="card-text">Floflis OS as a web browser. Web 3.0 ready. Capable of running some important apps.</p><br/><small>Yet in development. See it on <a href="https://github.com/Floflis/Internet-Cat" target="blank">GitHub</a> or take a glance at its <a href="https://ipfs.io/ipfs/QmRc9dfuJ3zDUxXVXve4GZVpuPrAp1Uy4Digk1aaFF1eWX/" target="blank">in-development</a> site</small>.
-    <a href="" target="blank" class="btn btn-primary">Access</a>
-  </div>
-</div>
-
-  </div>
-
-</div>-->
-
-<hr/>
-
 <img width="300px" src="img/undraw/loving.svg"/> <img width="300px" src="img/undraw/hooked.svg"/>
 <h1>Do you love Floflis?</h1>
 <p>Soon, you'll have some ways of helping Floflis; and know how your contributions will earn you FLOF tokens.</p>
@@ -214,8 +149,7 @@ width: 82%;
 <img width="300px" src="img/undraw/learning.svg"/> <img width="300px" src="img/undraw/candidate.svg"/>
 <h1>Your voice matters</h1>
 <p>Found bugs or wants to suggest a thing? Or to discuss anything?</p>
-<p>Send an email to: <a href="mailto:floflis@protonmail.com">daniellmesquita@protonmail.com</a>.</p>
-<p>Or open an issue on <a href="https://gitlab.com/floflis/" target="blank">GitLab</a> or <a href="https://github.com/Floflis/" target="blank">GitHub</a> at the respective repository you have a issue to report.</p>
+<p>Send a email to: <a href="mailto:floflis@protonmail.com">daniellmesquita@protonmail.com</a>.</p>
 <hr/>
 <h1>To do:</h1>
 <ul>
