Add links to header - other fixes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
  </head>
 <body id="body">
 <div id="app">
-<header><logo title="Floflis Platform">Floflis Platform</logo></header>
+<header><logo title="Floflis Platform">Floflis Platform</logo>
+<nav>
+<ul style="
+    overflow: hidden!important;
+">
+<!--<a href=""><li><div><i class="material-icons">widgets</i></div><p>Elements</p></li></a>-->
+<a href="./press"><li><!--<div><i class="material-icons">book</i></div>--><p>Press</p></li></a>
+<a href="https://floflis.github.io/blog" target="_blank"><li><!--<div><i class="material-icons">book</i></div>--><p>Blog</p></li></a>
+<!--<a href="" target="_blank"><li><div><i class="material-icons">comment</i></div><p>Forum</p></li></a>-->
+<a href="https://floflis.github.io/docs" target="_blank"><li><!--<div><i class="material-icons">book</i></div>--><p>Documentation</p></li></a>
+</ul>
+</nav></header>
 
 <div class="content">
 <article>
@@ -124,7 +135,7 @@ width: 82%;
   <div class="col-sm-6">
 
 <div class="card" style="width: 18rem;">
-  <img width="300px" class="card-img-top" src="https://github.com/Floflis/nftmark/raw/master/screenshot.png" alt="Card image cap">
+  <img width="300px" class="card-img-top" src="./press/press-kit/img/welcome.png" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Floflis OS</h5>
     <p class="card-text">The lead product of the Floflis Platform 🏅<br/><small>Currently based in <b>Ubuntu</b> (PCs, Raspberry Pi, SiFive Unmatched - or <b>RaspiOS</b> on its armhf - Raspberry Pi Zero/W - version)</small>.</p>
@@ -161,7 +172,7 @@ width: 82%;
     <h5 class="card-title">CLI</h5>
     <p class="card-text">Floflis' operating base. Even the graphical layers uses CLI.</p>
     <p class="card-text">Composed of DNA, Core and Soil layers. Further CLI layers spawns graphic desktop.</p>
-    <a href="https://floflis.github.io/cli" class="btn btn-primary">Access</a>
+    <a href="https://floflis.github.io/cli" target="_blank" class="btn btn-primary">Access</a>
   </div>
 </div>
 
