--- a/os/index.html
+++ b/os/index.html
@@ -45,7 +45,18 @@
 </style>
 
 <div id="app">
-<header><logo title="Floflis OS"></logo></header>
+<header><logo title="Floflis OS"></logo><nav>
+<ul style="
+    overflow: hidden!important;
+">
+<a href="././"><li><!--<div><i class="material-icons">book</i></div>--><p>Home</p></li></a>
+<!--<a href=""><li><div><i class="material-icons">widgets</i></div><p>Elements</p></li></a>-->
+<a href="./press"><li><!--<div><i class="material-icons">book</i></div>--><p>Press</p></li></a>
+<a href="https://floflis.github.io/blog" target="_blank"><li><!--<div><i class="material-icons">book</i></div>--><p>Blog</p></li></a>
+<!--<a href="" target="_blank"><li><div><i class="material-icons">comment</i></div><p>Forum</p></li></a>-->
+<a href="https://floflis.github.io/docs" target="_blank"><li><!--<div><i class="material-icons">book</i></div>--><p>Documentation</p></li></a>
+</ul>
+</nav></header>
 
 <div class="content">
 <article>
