add link to Reddit - ignore Presentation.pptx

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@ width: 82%;
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://www.youtube.com/channel/UCqboYZIRwremiHzqcvBdlYg" target="blank"><img src="img/social/youtube.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
 <a href="https://discord.gg/kcnYFqp" target="blank"><img src="img/social/discord.svg" width="40px" height="40px" title="Chat with us or get support" alt="Discord" class="round"></a>
+<a href="https://www.reddit.com/r/floflis/" target="blank"><img src="img/social/reddit.svg" width="40px" height="40px" title="Yes, we have a base in the Reddit planet" alt="Reddit" class="round"></a>
 <!--<a rel="me" href="https://mastodon.social/@floflis" target="blank"><img src="img/social/mastodon.svg" width="40px" height="40px" title="Follow us on Mastodon and receive latest news feed about Floflis and other useful projects" alt="Mastodon" class="round"></a>-->
 <!--<a href="https://riot.im/app/#/+floflis:matrix.org" target="blank"><img src="img/social/riot.svg" width="40px" height="40px" title="Chat with us or get support" alt="Riot.im" class="round"></a>-->
 <!--<a href="https://matrix.to/#/#openplanetnews:matrix.org" target="blank"><img src="img/social/riot.svg" width="40px" height="40px" title="Enable notifications for our updates" alt="Riot.im" class="round"></a>-->
