Differentiate Icon of Floflis Platform as it does for Logo

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -73,7 +73,7 @@
 <img width="315px" src="./os/logotype_white.svg">
 <br/><a href="./os/logotype_white.svg" target="_blank">SVG</a>
 
-<h4>Icon</h4>
+<h4>Icon Platform</h4>
 <img width="256px" src="./icon.svg">
 <br/><a href="./icon.svg" target="_blank">SVG</a> | <a href="./icon.png" target="_blank">PNG</a> | <a href="./icon.ico" target="_blank">ICO</a>
 
