Diff branding of Platform and OS

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -55,37 +55,47 @@
 <center><img class="img-fluid" src="logotype.png" title="Floflis Platform" alt="Floflis Platform"/><br/><h1>Press Kit</h1><h2>Floflis logos and brand assets</h2></center>
 <hr/>
 
-<h3>Floflis Logos</h3>
+<h3>Floflis Logotypes</h3>
 
-<h4>Logo Platform</h4>
+<h4>Platform</h4>
+
+<h5>Logo Platform</h5>
 <img width="315px" src="./logotype.png">
 <br/><a href="./logotype.png" target="_blank">PNG</a>
 
-<h4>Logo - 1-color (black)</h4>
+<h5>Logo - 1-color (black)</h5>
 <img width="315px" src="./os/logotype_black.svg">
 <br/><a href="./os/logotype_black.svg" target="_blank">SVG</a>
 
-<h4>Logo - 1-color (blue)</h4>
+<h4>OS</h4>
+
+<h5>Logo - 1-color (blue)</h5>
 <img width="315px" src="./os/logotype.svg">
 <br/><a href="./os/logotype.svg" target="_blank">SVG</a>
 
-<h4>Logo - 1-color (white)</h4>
+<h5>Logo - 1-color (white)</h5>
 <img width="315px" src="./os/logotype_white.svg">
 <br/><a href="./os/logotype_white.svg" target="_blank">SVG</a>
 
-<h4>Icon Platform</h4>
+<h3>Floflis Icons/Logos</h3>
+
+<h4>Platform</h4>
+
+<h5>Icon Platform</h5>
 <img width="256px" src="./icon.svg">
 <br/><a href="./icon.svg" target="_blank">SVG</a> | <a href="./icon.png" target="_blank">PNG</a> | <a href="./icon.ico" target="_blank">ICO</a>
 
-<h4>Icon - 1-color (black)</h4>
+<h4>OS</h4>
+
+<h5>Icon - 1-color (black)</h5>
 <img width="256px" src="./os/logo_flat_black.svg">
 <br/><a href="./os/logo_flat_black.svg" target="_blank">SVG</a>
 
-<h4>Icon - 1-color (blue)</h4>
+<h5>Icon - 1-color (blue)</h5>
 <img width="256px" src="./os/logo_flat.svg">
 <br/><a href="./os/logo_flat.svg" target="_blank">SVG</a>
 
-<h4>Icon - 1-color (white)</h4>
+<h5>Icon - 1-color (white)</h5>
 <img width="256px" src="./os/logo_flat_white.svg">
 <br/><a href="./os/logo_flat_white.svg" target="_blank">SVG</a>
 
