For both logotypes and icons: add colored, gray and yellow variants
For icons, there's also the lined version for yellow and colored

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -77,6 +77,18 @@
 <img width="315px" src="./os/logotype_white.svg">
 <br/><a href="./os/logotype_white.svg" target="_blank">SVG</a>
 
+<h5>Logo - colored</h5>
+<img width="315px" src="./press/press-kit/img/logotype_colored.svg">
+<br/><a href="./press/press-kit/img/logotype_colored.svg" target="_blank">SVG</a>
+
+<h5>Logo - 1-color (gray)</h5>
+<img width="315px" src="./press/press-kit/img/logotype_gray.svg">
+<br/><a href="./press/press-kit/img/logotype_gray.svg" target="_blank">SVG</a>
+
+<h5>Logo - 1-color (yellow)</h5>
+<img width="315px" src="./press/press-kit/img/logotype_yellow.svg">
+<br/><a href="./press/press-kit/img/logotype_yellow.svg" target="_blank">SVG</a>
+
 <h3>Floflis Icons/Logos</h3>
 
 <h4>Platform</h4>
@@ -98,6 +110,30 @@
 <h5>Icon - 1-color (white)</h5>
 <img width="256px" src="./os/logo_flat_white.svg">
 <br/><a href="./os/logo_flat_white.svg" target="_blank">SVG</a>
+
+
+
+
+
+<h5>Icon - colored</h5>
+<img width="315px" src="./press/press-kit/img/icon_colored.svg">
+<br/><a href="./press/press-kit/img/icon_colored.svg" target="_blank">SVG</a>
+
+<h5>Icon - colored lined</h5>
+<img width="315px" src="./press/press-kit/img/icon_colored-lined.svg">
+<br/><a href="./press/press-kit/img/icon_colored-lined.svg" target="_blank">SVG</a>
+
+<h5>Icon - 1-color (gray)</h5>
+<img width="315px" src="./press/press-kit/img/icon_gray.svg">
+<br/><a href="./press/press-kit/img/icon_gray.svg" target="_blank">SVG</a>
+
+<h5>Icon - 1-color (yellow)</h5>
+<img width="315px" src="./press/press-kit/img/icon_yellow.svg">
+<br/><a href="./press/press-kit/img/icon_yellow.svg" target="_blank">SVG</a>
+
+<h5>Icon - yellow lined</h5>
+<img width="315px" src="./press/press-kit/img/icon_yellow-lined.svg">
+<br/><a href="./press/press-kit/img/icon_yellow-lined.svg" target="_blank">SVG</a>
 
 <h3>Screenshots</h3>
 
